WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265549
REGRESSION (
270354@main
?): [ macOS Release x86_64 wk2 ] media/media-source/mock-managedmse-bufferedchange.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=265549
Summary
REGRESSION (270354@main?): [ macOS Release x86_64 wk2 ] media/media-source/mo...
Marta Darbinyan
Reported
2023-11-29 14:28:20 PST
Description: media/media-source/mock-managedmse-bufferedchange.html is crashing intermittently on macOS Release x86_64. Suspecting regression point is
270354@main
. This issue can be reproduced using the command: un-webkit-tests --release --iterations=100 media/media-source/mock-managedmse-bufferedchange.html History:
https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia-source%2Fmock-managedmse-bufferedchange.html&version_name=Monterey&version_name=Sonoma&version_name=Ventura&flavor=wk2&architecture=x86_64&style=release
Crash message:: stderr: com.apple.WebKit.GPU.Development terminated (pid 81546) for reason: crash Link:
https://build.webkit.org/results/Apple-Sonoma-Release-WK2-Tests/271283@main%20(814)/media/media-source/mock-managedmse-bufferedchange-sample.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-29 14:28:54 PST
<
rdar://problem/118951399
>
EWS
Comment 2
2023-11-29 14:50:15 PST
Test gardening commit
271302@main
(efca0509a836): <
https://commits.webkit.org/271302@main
> Reviewed commits have been landed. Closing PR #21073 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3
2023-12-01 01:06:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21149
EWS
Comment 4
2023-12-01 09:01:08 PST
Committed
271384@main
(74dab6364fd5): <
https://commits.webkit.org/271384@main
> Reviewed commits have been landed. Closing PR #21149 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug